Web based form editor user feedback: radio buttons / checks +fix point 3 "when an item of valuelist is too long, the radio is not well placed ( same issue in checkbox menu )"
Case: SVY-5793

--- a/com.servoy.eclipse.designer.rib/rib/src/css/servoyformeditor.css
+++ b/com.servoy.eclipse.designer.rib/rib/src/css/servoyformeditor.css
@@ -64,6 +64,9 @@ html {
 	padding: 27px 0 0 8px!important;
 	font-size: small!important;
 }
+.ui-field-contain fieldset{
+	min-width:100%;
+}
 .ui-popup-hidden {
 	display: none !important;
 }
